--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,20 +1,21 @@
 .footer {
-    --font-family: 'Times New Roman';
-    --primary-color: rgb(233, 232, 232);
-    --secondary-color: rgb(74, 106, 196);
+    --font-family: Andalé Mono, monospace;
+    --primary-color: rgb(0, 0, 0);
+    --secundary-color: rgb(149, 1, 1);
+    --text-primary-color: rgb(149, 1, 1);
+    --text-secundary-color: rgb(255, 255, 255);
 
-    position: fixed;
-    bottom: 0;
+    position: absolute;
     width: 100%;
-    height: 3%;
+    height: 30px;
 
     background-color: var(--primary-color);
-    border-top: 3px solid var(--secondary-color);
+    border-top: 3px solid var(--secundary-color);
 
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px;
+    padding-block: 16px;
 
     .app {
         display: flex;
@@ -23,11 +24,11 @@
         gap: 32px;
 
         font-family: var(--font-family);
-        color: var(--secondary-color);
+        color: var(--text-secundary-color);
     }
 
     .name {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 900;
     }
 
