--- a/src/pages/PageNotFound/PageNotFound.module.css
+++ b/src/pages/PageNotFound/PageNotFound.module.css
@@ -1,16 +1,28 @@
-.container {
+.pageNotFound {
     --font-family: Andalé Mono, monospace;
     --primary-color: rgb(43, 43, 43);
     --secundary-color: rgb(149, 1, 1);
     --text-primary-color: rgb(149, 1, 1);
     --text-secundary-color: rgb(255, 255, 255);
 
+    padding-top: 64px;
     width: 100%;
     height: 100%;
     background-color: var(--primary-color);
-    padding-block: 24px;
-    
     color: var(--text-secundary-color);
     text-align: center;
-    
+}
+
+.pageNotFound h2 {
+    padding-block: 16px;
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.pageNotFound img {
+    border: 3px solid var(--secundary-color);
+    border-radius: 5px;
+    margin-bottom: 16px;
+    width: 90%;
+    height: 100%;
 }
