--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
 
     position: absolute;
     width: 100%;
-    height: 60px;
+    height: auto;
 
     background-color: var(--primary-color);
     border-top: 3px solid var(--secundary-color);
