--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -1,13 +1,19 @@
 .category {
     display: flex;
     flex-direction: column;
+
+    min-width: 280px;
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 .category div {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 10px;
+    width: 100%;
+    height: 180px;
+    align-items: center;
 }
 
 .category h2 {
