--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,16 +1,12 @@
 .container {
-    --font-family: Andalé Mono, monospace;
-    --primary-color: rgb(43, 43, 43);
-    --secundary-color: rgb(149, 1, 1);
-    --text-primary-color: rgb(149, 1, 1);
-    --text-secundary-color: rgb(255, 255, 255);
-
     width: 100%;
-    height: 100%;
-    background-color: var(--primary-color);
-    padding-block: 24px;
+    min-height: 100vh;
+    background-color: var(--grey-color);
+    padding-bottom: 24px;
+    padding-inline: 32px;
     
-    color: var(--text-secundary-color);
+    color: var(--white-color);
     text-align: center;
-    
+
+    overflow: hidden;
 }
