--- a/src/pages/PageNotFound/PageNotFound.module.css
+++ b/src/pages/PageNotFound/PageNotFound.module.css
@@ -1,15 +1,9 @@
 .pageNotFound {
-    --font-family: Andalé Mono, monospace;
-    --primary-color: rgb(43, 43, 43);
-    --secundary-color: rgb(149, 1, 1);
-    --text-primary-color: rgb(149, 1, 1);
-    --text-secundary-color: rgb(255, 255, 255);
-
     padding-top: 64px;
     width: 100%;
     height: 100%;
-    background-color: var(--primary-color);
-    color: var(--text-secundary-color);
+    background-color: var(--black-color);
+    color: var(--white-color);
     text-align: center;
 }
 
@@ -20,9 +14,9 @@
 }
 
 .pageNotFound img {
-    border: 3px solid var(--secundary-color);
+    border: 3px solid var(--strong-red-color);
     border-radius: 5px;
     margin-bottom: 16px;
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: 60%;
 }
