--- a/src/components/TrailerList/TrailerList.module.css
+++ b/src/components/TrailerList/TrailerList.module.css
@@ -6,7 +6,6 @@
     justify-content: center;
 }
 
-.trailers h2 {
-    padding-top: 0px;
-    padding-bottom: 16px;
+h2 {
+    padding-block: 16px;
 }
